--- a/examples/test.html
+++ b/examples/test.html
@@ -1514,6 +1514,7 @@
       </div>
     </div>
 
+    <script src="../build/vendors-script.js"></script>
     <script src="../build/form-modules-script.js"></script>
     <script type="module" src="./examples.js"></script>
   </body>
